--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>functionalprogramming</module>
         <module>JUC</module>
         <module>util</module>
+        <module>annotation</module>
     </modules>
 
 
