--- a/annotation/pom.xml
+++ b/annotation/pom.xml
@@ -10,6 +10,127 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>annotation</artifactId>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                    <annotationProcessors>
+                        <annotationProcessor>
+                            test3.BuilderProcessor
+                        </annotationProcessor>
+                    </annotationProcessors>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <!--<build>-->
+        <!--<plugins>-->
+            <!--<plugin>-->
+                <!--<artifactId>maven-compiler-plugin</artifactId>-->
+                <!--<version>3.1</version>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<id>default-compile</id>-->
+                        <!--<phase>compile</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>compile</goal>-->
+                        <!--</goals>-->
+                        <!--<configuration>-->
+                            <!--<source>1.8</source>-->
+                            <!--<target>1.8</target>-->
+                            <!--<annotationProcessors>-->
+                                <!--<annotationProcessor>test.TestAnnotationProcessor</annotationProcessor>-->
+                            <!--</annotationProcessors>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
+        <!--</plugins>-->
+    <!--</build>-->
+    <!--<build>-->
+        <!--<finalName>Spring</finalName>-->
+        <!--<plugins>-->
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-compiler-plugin</artifactId>-->
+                <!--<version>2.0.2</version>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<id>default-compile</id>-->
+                        <!--<configuration>-->
+                            <!--<compilerArgument>-proc:none</compilerArgument>-->
+                            <!--<source>1.8</source>-->
+                            <!--<target>1.8</target>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
+                    <!--<execution>-->
+                        <!--<id>default-testCompile</id>-->
+                        <!--<configuration>-->
+                            <!--<source>1.8</source>-->
+                            <!--<target>1.8</target>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
+        <!--</plugins>-->
+    <!--</build>-->
+
+    <!--<profiles>-->
+        <!--<profile>-->
+            <!--<id>apt</id>-->
+            <!--<build>-->
+                <!--<plugins>-->
+                    <!--<plugin>-->
+                        <!--<groupId>org.bsc.maven</groupId>-->
+                        <!--<artifactId>maven-processor-plugin</artifactId>-->
+                        <!--<executions>-->
+                            <!--<execution>-->
+                                <!--<id>process</id>-->
+                                <!--<goals>-->
+                                    <!--<goal>process</goal>-->
+                                <!--</goals>-->
+                                <!--<phase>generate-sources</phase>-->
+                                <!--<configuration>-->
+                                    <!--<outputDirectory>target/generated-sources/annotations</outputDirectory>-->
+                                    <!--<processors>-->
+                                        <!--<processor>test.TestAnnotationProcessor</processor>-->
+                                    <!--</processors>-->
+                                <!--</configuration>-->
+                            <!--</execution>-->
+                        <!--</executions>-->
+                    <!--</plugin>-->
+                <!--</plugins>-->
+            <!--</build>-->
+        <!--</profile>-->
+    <!--</profiles>-->
+
+    <!--<build>-->
+        <!--<plugins>-->
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-compiler-plugin</artifactId>-->
+                <!--<version>3.8.1</version>-->
+                <!--<configuration>-->
+                    <!--<source>1.8</source>-->
+                    <!--<target>1.8</target>-->
+                    <!--<encoding>UTF-8</encoding>-->
+                    <!--<annotationProcessors>-->
+                        <!--<annotationProcessor>-->
+                            <!--test.TestAnnotationProcessor-->
+                        <!--</annotationProcessor>-->
+                    <!--</annotationProcessors>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
+        <!--</plugins>-->
+
+    <!--</build>-->
+
 
 
 </project>
