--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>JUC</module>
         <module>util</module>
         <module>annotation</module>
+        <module>leetCode</module>
+        <module>lock</module>
     </modules>
 
     <dependencies>
